syntax = "proto3";

// import "common.proto";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ModifyUser(ModifyUserRequest) returns (CodeMsgResponse);
  rpc LoginUser(LoginUserRequest) returns (CodeMsgResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string profileName = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  int32 id = 1;
  string email = 2;
  string profileName = 3;
  string createdAt = 4;
  ProfileResponse profile = 5;
}

message CodeMsgResponse {
  string code = 1;
  string message = 2;
}

message ProfileResponse {
  int32 id = 1;
  string profileName = 2;
}


message CreateUserResponse {
  string code = 1;
  string message = 2;
  UserResponse data = 3;
}

message GetUserResponse {
  string code = 1;
  string message = 2;
  UserResponse data = 3;
}

message ModifyUserRequest {
  int32 id = 1;
  string email = 2;
  string password = 3;
  string profileName = 4;
}